# helpdesk-system

./: .dockerignore  .editorconfig  .flake8  .gitignore  .isort.cfg  Dockerfile  LICENSE  Makefile  README.md  fly.toml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: test.yml
docs/: stories.md
helpdesk/: manage.py  mypy.ini  pyproject.toml
helpdesk/accounts/: admin.py  forms.py  middleware.py  models.py  urls.py  views.py
helpdesk/accounts/migrations/: 0001_create_user_model.py  0001_initial.py  0002_add_default_ticket_queue.py  0002_create_ticket_models.py  0003_auto_20230318_1405.py  0004_allow_default_ticket_queue_to_be_blank.py  0005_user_onboarded_at.py  0006_alter_user_options.py
helpdesk/core/: admin.py  models.py
helpdesk/core/migrations/: 0001_initial.py
helpdesk/core/templatetags/: navigation.py
helpdesk/display/: urls.py  views.py
helpdesk/helpdesk/: account_adapter.py  asgi.py  configuration.dev.py  configuration.docker.py  configuration.example.py  configuration.testing.py  context_processors.py  forms.py  settings.py  tables.py  urls.py  utils.py  views.py  wsgi.py
helpdesk/helpdesk/templatetags/: filter_helpers.py
helpdesk/teams/: admin.py  filters.py  forms.py  models.py  srcomp.py  tables.py  urls.py  views.py
helpdesk/templates/: base.html  base_app.html  base_hero.html  base_hero_wide.html  search.html  table.html
helpdesk/tickets/: admin.py  filters.py  forms.py  models.py  tables.py  urls.py  views.py
script/: compile-requirements.sh
(+74 files in other folders)
